--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<springfox.version>2.9.2</springfox.version>
+		<guava.version>20.0</guava.version>
+		<spring.conext.support.version>4.1.7.RELEASE</spring.conext.support.version>
 	</properties>
 
 	<dependencies>
@@ -48,13 +51,23 @@
 		<dependency>
 	        <groupId>com.google.guava</groupId>
 	        <artifactId>guava</artifactId>
-	        <version>18.0</version>
+	        <version>${guava.version}</version>
 	    </dependency>
 	    <dependency>
 	        <groupId>org.springframework</groupId>
 	        <artifactId>spring-context-support</artifactId>
-	        <version>4.1.7.RELEASE</version>
+	        <version>${spring.conext.support.version}</version>
 	    </dependency>
+	    <dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
